<resources>
    <string name="app_name">Folklore del mundo</string>
    <string name="creador">Creador: Grisel Pérez</string>
    <string name="version">Version 1.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Folklore</string>
    <string name="subtitulo">Una ventana al mundo</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused…</string>
    <string name="playing">Playing…</string>
    <!-- Strings related to login -->
    <string name="mail">Correo electronico</string>
    <string name="pwd">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registro">Registrarse</string>
    <string name="footer">© Folklore</string>
    <string name="restablecer">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="mapa">Mapa</string>
    <string name="back">Regresar</string>


</resources>